[gd_scene load_steps=19 format=3 uid="uid://cy6kio86o3dtn"]

[ext_resource type="Material" uid="uid://b3qhp65r7uy5m" path="res://C4F_Farmer/Materials/Green.tres" id="1_abe06"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/ItemRegistry.gd" id="1_y7876"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/Movement.gd" id="2_u4xhh"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/RTSController.gd" id="3_l0yox"]
[ext_resource type="PackedScene" uid="uid://giniphuhuaml" path="res://C4F_Farmer/Nodes/PotatoPlant.tscn" id="3_udrmp"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/Inventory.gd" id="4_k6ca7"]
[ext_resource type="Resource" uid="uid://btrhiyum38m4t" path="res://C4F_Farmer/Items/Carrot.tres" id="4_mi47n"]
[ext_resource type="PackedScene" uid="uid://fj2qmrrx5dtq" path="res://C4F_Farmer/Nodes/CarrotPlant.tscn" id="5_6qlos"]
[ext_resource type="Resource" uid="uid://cnwk2r0cts5gd" path="res://C4F_Farmer/Items/Potato.tres" id="5_b5fa0"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/Farm.gd" id="6_jkqwl"]
[ext_resource type="Script" path="res://C4F_Farmer/Scripts/InventoryHUD.gd" id="11_yqvyn"]

[sub_resource type="BoxMesh" id="BoxMesh_rxdnr"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_xeyb4"]
size = Vector3(10, 1, 10)

[sub_resource type="CylinderMesh" id="CylinderMesh_pgua5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i0ep3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t0iom"]
radius = 0.05
height = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ecvqu"]
radius = 0.05
height = 0.2

[sub_resource type="NavigationMesh" id="NavigationMesh_cocg1"]
vertices = PackedVector3Array(1.46, 0.04, -2.06, 1.68, 0.04, -2.1, 1.68, 0.04, -4.98, 1.26, 0.04, -1.9, 1.18, 0.04, -1.76, -4.98, 0.04, -4.98, -4.98, 0.04, -1.56, 1.16, 0.04, -1.56, 2.2, 0.04, -1.74, 2.22, 0.04, -1.56, 4.98, 0.04, -1.56, 2.14, 0.04, -1.86, 1.86, 0.04, -2.08, 1.98, 0.04, -2.02, 4.98, 0.04, -4.98, 1.2, 1.04, -1.44, 1.28, 1.04, -1.26, 1.38, 1.04, -1.16, 1.6, 1.04, -2.06, 1.42, 1.04, -2, 1.3, 1.04, -1.9, 1.98, 1.04, -1.98, 1.78, 1.04, -2.06, 2.12, 1.04, -1.3, 2.18, 1.04, -1.48, 2.18, 1.04, -1.66, 1.8, 1.04, -1.08, 1.96, 1.04, -1.14, 2.1, 1.04, -1.86, 1.2, 1.04, -1.68, 1.56, 1.04, -1.08, 1.52, 0.04, 4.98, 1.52, 0.04, -1.06, 1.38, 0.04, -1.12, 1.16, 0.04, -1.44, 1.24, 0.04, -1.26, -4.98, 0.04, 4.98, 2.18, 0.04, -1.34, 2.02, 0.04, -1.14, 1.8, 0.04, -1.04, 4.98, 0.04, 4.98)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(3, 2, 0), PackedInt32Array(3, 4, 2), PackedInt32Array(2, 4, 5), PackedInt32Array(5, 4, 6), PackedInt32Array(4, 7, 6), PackedInt32Array(10, 9, 8), PackedInt32Array(10, 8, 11), PackedInt32Array(12, 1, 2), PackedInt32Array(13, 12, 2), PackedInt32Array(11, 13, 10), PackedInt32Array(10, 13, 14), PackedInt32Array(14, 13, 2), PackedInt32Array(17, 16, 15), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 22), PackedInt32Array(20, 22, 21), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 27), PackedInt32Array(25, 27, 26), PackedInt32Array(21, 28, 25), PackedInt32Array(17, 15, 26), PackedInt32Array(26, 15, 20), PackedInt32Array(26, 20, 21), PackedInt32Array(26, 21, 25), PackedInt32Array(20, 15, 29), PackedInt32Array(26, 30, 17), PackedInt32Array(33, 32, 31), PackedInt32Array(6, 7, 34), PackedInt32Array(6, 34, 35), PackedInt32Array(33, 31, 35), PackedInt32Array(35, 31, 36), PackedInt32Array(35, 36, 6), PackedInt32Array(37, 9, 10), PackedInt32Array(38, 37, 10), PackedInt32Array(38, 10, 39), PackedInt32Array(39, 10, 40), PackedInt32Array(39, 40, 31), PackedInt32Array(31, 32, 39)]
geometry_source_geometry_mode = 1
geometry_source_group_name = &"ground"
cell_size = 0.02
cell_height = 0.02
agent_radius = 0.02
agent_max_climb = 0.02

[node name="Main" type="Node"]

[node name="ItemRegistry" type="Node" parent="."]
script = ExtResource("1_y7876")
registry = {
ExtResource("5_b5fa0"): ExtResource("3_udrmp"),
ExtResource("4_mi47n"): ExtResource("5_6qlos")
}

[node name="Level" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Level" groups=["ground"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/Ground"]
material_override = ExtResource("1_abe06")
mesh = SubResource("BoxMesh_rxdnr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Ground"]
shape = SubResource("BoxShape3D_xeyb4")

[node name="Obstacle" type="StaticBody3D" parent="Level" groups=["ground"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.68641, 0, -1.56643)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/Obstacle"]
mesh = SubResource("CylinderMesh_pgua5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Obstacle"]
shape = SubResource("CylinderShape3D_i0ep3")

[node name="Player" type="CharacterBody3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.112121, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Level/Player"]
mesh = SubResource("CapsuleMesh_t0iom")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Player"]
shape = SubResource("CapsuleShape3D_ecvqu")

[node name="Camera3D" type="Camera3D" parent="Level/Player"]
transform = Transform3D(1, 0, 0, 0, 0.947546, 0.319621, 0, -0.319621, 0.947546, 0, 0.932055, 1)

[node name="Movement" type="Node" parent="Level/Player"]
script = ExtResource("2_u4xhh")

[node name="RTSController" type="Node" parent="Level/Player" node_paths=PackedStringArray("camera")]
script = ExtResource("3_l0yox")
camera = NodePath("../Camera3D")

[node name="Inventory" type="Node" parent="Level/Player"]
script = ExtResource("4_k6ca7")

[node name="Farm" type="Node" parent="Level/Player"]
script = ExtResource("6_jkqwl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(0.796097, 0, -0.605169, 0.54254, 0.443024, 0.713709, 0.268104, -0.89651, 0.35269, 0, 0, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Level"]
navigation_mesh = SubResource("NavigationMesh_cocg1")

[node name="CarrotPlant" parent="Level" instance=ExtResource("5_6qlos")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="PotatoPlant" parent="Level" instance=ExtResource("3_udrmp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="CarrotPlant2" parent="Level" instance=ExtResource("5_6qlos")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="InventoryHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("11_yqvyn")

[node name="ItemList" type="ItemList" parent="InventoryHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -192.0
offset_right = 384.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
max_columns = 0

[connection signal="onNumberKeyPressed" from="Level/Player/RTSController" to="Level/Player/Inventory" method="SelectItem"]
[connection signal="onItemAdd" from="Level/Player/Inventory" to="InventoryHUD" method="UpdateItem"]
[connection signal="onItemUse" from="Level/Player/Inventory" to="InventoryHUD" method="UpdateItem"]
